// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /api/demos/issuer/manifests/[type]/[token] returns the CreditScore manifest 1`] = `
Object {
  "format": Object {
    "jwt_vc": Object {
      "alg": Array [
        "EdDSA",
      ],
    },
    "jwt_vp": Object {
      "alg": Array [
        "EdDSA",
      ],
    },
  },
  "id": "CreditScoreManifest",
  "issuer": Object {
    "id": "did:web:demos.verite.id",
    "name": "Verite",
    "styles": Object {},
  },
  "output_descriptors": Array [
    Object {
      "description": "Attestation that Verite has performed a Credit Score check for this subject",
      "display": Object {
        "description": Object {
          "text": "The Credit Score authority processes credit worthiness analysis, potentially employing a number of internal and external vendor providers.",
        },
        "properties": Array [
          Object {
            "label": "Score",
            "path": Array [
              "$.CreditScoreAttestation.score",
            ],
            "schema": Object {
              "type": "number",
            },
          },
          Object {
            "label": "Score Type",
            "path": Array [
              "$.CreditScoreAttestation.scoreType",
            ],
            "schema": Object {
              "type": "string",
            },
          },
          Object {
            "label": "Provider",
            "path": Array [
              "$.CreditScoreAttestation.provider",
            ],
            "schema": Object {
              "type": "string",
            },
          },
        ],
        "subtitle": Object {
          "fallback": "Includes credit score",
          "path": Array [
            "$.CreditScoreAttestation.scoreType",
          ],
        },
        "title": Object {
          "text": "Verite Risk Score",
        },
      },
      "id": "creditScoreAttestationOutput",
      "name": "Proof of Credit Score from Verite",
      "schema": Array [
        Object {
          "uri": "https://verite.id/definitions/schemas/0.0.1/CreditScoreAttestation",
        },
      ],
      "styles": Object {
        "background": Object {
          "color": "#8B5CF6",
        },
        "hero": Object {
          "alt": "Credit Score Visual",
          "uri": "http://test.host/img/credit-score-hero.png",
        },
        "text": Object {
          "color": "#FFFFFF",
        },
        "thumbnail": Object {
          "alt": "Verite Logo",
          "uri": "http://test.host/img/credit-score-thumbnail.png",
        },
      },
    },
  ],
  "presentation_definition": Object {
    "format": Object {
      "jwt_vp": Object {
        "alg": Array [
          "EdDSA",
        ],
      },
    },
    "id": "ProofOfControlPresentationDefinition",
    "input_descriptors": Array [
      Object {
        "constraints": Object {
          "fields": Array [
            Object {
              "id": "holder",
              "path": Array [
                "$.holder",
              ],
              "purpose": "The VP should contain a DID in the holder, which is the same DID that signs the VP. This DID will be used as the subject of the issued VC",
            },
          ],
        },
        "id": "proofOfIdentifierControlVP",
        "name": "Proof of Control Verifiable Presentation",
        "purpose": "A VP establishing proof of identifier control over the DID.",
      },
    ],
  },
  "version": "0.1.0",
}
`;

exports[`GET /api/demos/issuer/manifests/[type]/[token] returns the KYC/AML manifest 1`] = `
Object {
  "format": Object {
    "jwt_vc": Object {
      "alg": Array [
        "EdDSA",
      ],
    },
    "jwt_vp": Object {
      "alg": Array [
        "EdDSA",
      ],
    },
  },
  "id": "KYCAMLManifest",
  "issuer": Object {
    "id": "did:web:demos.verite.id",
    "name": "Verite",
    "styles": Object {},
  },
  "output_descriptors": Array [
    Object {
      "description": "Attestation that Verite has completed KYC/AML verification for this subject",
      "display": Object {
        "description": Object {
          "text": "The KYC authority processes Know Your Customer and Anti-Money Laundering analysis, potentially employing a number of internal and external vendor providers.",
        },
        "properties": Array [
          Object {
            "label": "Process",
            "path": Array [
              "$.KYCAMLAttestation.process",
            ],
            "schema": Object {
              "type": "string",
            },
          },
          Object {
            "label": "Approved At",
            "path": Array [
              "$.KYCAMLAttestation.approvalDate",
            ],
            "schema": Object {
              "format": "date-time",
              "type": "string",
            },
          },
        ],
        "subtitle": Object {
          "fallback": "Includes date of approval",
          "path": Array [
            "$.approvalDate",
            "$.vc.approvalDate",
          ],
        },
        "title": Object {
          "text": "Verite KYC Attestation",
        },
      },
      "id": "kycAttestationOutput",
      "name": "Proof of KYC from Verite",
      "schema": Array [
        Object {
          "uri": "https://verite.id/definitions/schemas/0.0.1/KYCAMLAttestation",
        },
      ],
      "styles": Object {
        "background": Object {
          "color": "#EC4899",
        },
        "hero": Object {
          "alt": "KYC+AML Visual",
          "uri": "http://test.host/img/kyc-aml-hero.png",
        },
        "text": Object {
          "color": "#FFFFFF",
        },
        "thumbnail": Object {
          "alt": "Verite Logo",
          "uri": "http://test.host/img/kyc-aml-thumbnail.png",
        },
      },
    },
  ],
  "presentation_definition": Object {
    "format": Object {
      "jwt_vp": Object {
        "alg": Array [
          "EdDSA",
        ],
      },
    },
    "id": "ProofOfControlPresentationDefinition",
    "input_descriptors": Array [
      Object {
        "constraints": Object {
          "fields": Array [
            Object {
              "id": "holder",
              "path": Array [
                "$.holder",
              ],
              "purpose": "The VP should contain a DID in the holder, which is the same DID that signs the VP. This DID will be used as the subject of the issued VC",
            },
          ],
        },
        "id": "proofOfIdentifierControlVP",
        "name": "Proof of Control Verifiable Presentation",
        "purpose": "A VP establishing proof of identifier control over the DID.",
      },
    ],
  },
  "version": "0.1.0",
}
`;
